--- a/index.html
+++ b/index.html
@@ -2,63 +2,61 @@
 <html lang="ja">
 
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width">
-   <link rel="stylesheet" type="text/css"  href="style.css">
-   <title>Sample Site</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>CSS HoverSubMenu</title>
 </head>
 
 <body>
 
+  <div id="container">
+
     <header>
-      <h1>Sample Site</h1>
+      <h1>矢野 美月(Miduki's Portfolio)</h1>
     </header>
 
     <nav>
-      <ul>
-        <li><a href="index.html" >home</a></li>
-        <li><a href="#">about me</a></li>
-        <li><a href="works.html">works</a></li>
-        <li><a href="#">contact</a></li>
-       </ul>
-     </nav>
+      <ul class="menu">
+        <li><a href="#">HOME</a>
+          <ul class="menu-child">
+            <li><a href="#">NEWS</a></li>
+            <li><a href="#">PRESS RELEASE</a></li>
+          </ul>
+        </li>
+        <li><a href="#">WORK</a>
+          <ul class="menu-child">
+            <li><a href="#">PHOTOGRAPHY</a></li>
+            <li><a href="#">PAINTING</a></li>
+            <li><a href="#">PAPER CUTTING</a></li>
+          </li>
+          <li><a href="#">SKILL</a>
+            <ul class="menu-child">
+              <li><a href="#">PRODUCTS</a></li>
+            </ul>
+        </li>
+        <li><a href="#">ABOUT</a>
+          <ul class="menu-child">
+            <li><a href="#">ACCESS</a></li>
+            <li><a href="#">CONTACT</a></li>
+            <li><a href="#">BLOG</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
 
-    <main>
-
-      <section>
-
-        <article>
-          <h1>春はあけぼの</h1>
-          <p>
-            春はあけぼの。やうやう白くなりゆく山際、少し明かりて、紫だちたる雲の細くたなびきたる。夏は夜。月のころはさらなり、闇もなほ、蛍の多く飛びちがひたる。また、ただ一つ二つなど、ほかにうち光て行くもをかし。雨など降るもをかし。
-          </P>
-        </article>
-
-        <article>
-          <h1>方丈記</h1>
-          <p>
-            行く川のながれは絶えずして、しかも本の水にあらず。よどみに浮ぶうたかたは、かつ消えかつ結びて久しくとゞまることなし。世の中にある人とすみかと、またかくの如し。
-          </P>
-        </article>
-
-      </section>
-
-      <aside>
-        <h1>LINKS</h1>
-        <ul>
-          <li><a href="#">Fine Arts</a></li>
-          <li><a href="#">Photography</a></li>
-          <li><a href="#">Visual Design</a></li>
-          <li><a href="#">Product Design</a></li>
-          <li><a href="#">Social Design</a></li>
-         </ul>
-      </aside>
-
-    </main>
+    <article>
+      <h1>sample</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      <P>
+    </article>
 
     <footer>
-      &copy; Your Name　　http://www.example.com
+      &copy; http://example.com
     </footer>
+
+  </div>
 
 </body>
 </html>
