--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <title>CSS HoverSubMenu</title>
+  <title>Portfolio</title>
 </head>
 
 <body>
@@ -29,8 +29,9 @@
             <li><a href="#">PHOTOGRAPHY</a></li>
             <li><a href="#">PAINTING</a></li>
             <li><a href="#">PAPER CUTTING</a></li>
-          </li>
-          <li><a href="#">SKILL</a>
+          </ul>
+        </li>
+        <li><a href="#">SKILL</a>
             <ul class="menu-child">
               <li><a href="#">PRODUCTS</a></li>
             </ul>
