--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </li>
         <li><a href="#">WORK</a>
           <ul class="menu-child">
-            <li><a href="#">PHOTOGRAPHY</a></li>
-            <li><a href="#">PAINTING</a></li>
-            <li><a href="#">PAPER CUTTING</a></li>
+            <li><a href="photography.html">PHOTOGRAPHY</a></li>
+            <li><a href="painting.html">PAINTING</a></li>
+            <li><a href="paper.hyml">PAPER CUTTING</a></li>
           </ul>
         </li>
         <li><a href="#">SKILL</a>
@@ -39,8 +39,8 @@
         <li><a href="#">ABOUT</a>
           <ul class="menu-child">
             <li><a href="#">ACCESS</a></li>
-            <li><a href="#">CONTACT</a></li>
-            <li><a href="#">BLOG</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="blog.html">BLOG</a></li>
           </ul>
         </li>
       </ul>
