--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <ul class="menu-child">
             <li><a href="photography.html">PHOTOGRAPHY</a></li>
             <li><a href="painting.html">PAINTING</a></li>
-            <li><a href="paper.hyml">PAPER CUTTING</a></li>
+            <li><a href="paper.html">PAPER CUTTING</a></li>
           </ul>
         </li>
         <li><a href="#">SKILL</a>
