--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="container">
 
     <header>
-      <h1>矢野 美月(Miduki's Portfolio)</h1>
+      <h1><a href = "index.html">Mizuki RuizBerlanga</a></h1>
     </header>
 
     <nav>
@@ -21,7 +21,6 @@
         <li><a href="#">HOME</a>
           <ul class="menu-child">
             <li><a href="#">NEWS</a></li>
-            <li><a href="#">PRESS RELEASE</a></li>
           </ul>
         </li>
         <li><a href="#">WORK</a>
@@ -29,16 +28,16 @@
             <li><a href="photography.html">PHOTOGRAPHY</a></li>
             <li><a href="painting.html">PAINTING</a></li>
             <li><a href="paper.html">PAPER CUTTING</a></li>
+            <li><a href="knitting.html">KNITTING</a></li>
           </ul>
         </li>
         <li><a href="#">SKILL</a>
             <ul class="menu-child">
-              <li><a href="#">PRODUCTS</a></li>
+              <li><a href="products.html">PRODUCTS</a></li>
             </ul>
         </li>
         <li><a href="#">ABOUT</a>
           <ul class="menu-child">
-            <li><a href="#">ACCESS</a></li>
             <li><a href="contact.html">CONTACT</a></li>
             <li><a href="blog.html">BLOG</a></li>
           </ul>
@@ -54,7 +53,7 @@
     </article>
 
     <footer>
-      &copy; http://example.com
+      &copy; 2020 miduki
     </footer>
 
   </div>
