--- a/paper.html
+++ b/paper.html
@@ -13,7 +13,7 @@
   <div id="container">
 
     <header>
-      <h1>矢野 美月(Miduki's Portfolio)</h1>
+      <h1><a href = "index.html">Mizuki RuizBerlanga</a></h1>
     </header>
 
     <nav>
@@ -21,24 +21,23 @@
         <li><a href="#">HOME</a>
           <ul class="menu-child">
             <li><a href="#">NEWS</a></li>
-            <li><a href="#">PRESS RELEASE</a></li>
           </ul>
         </li>
         <li><a href="#">WORK</a>
           <ul class="menu-child">
             <li><a href="photography.html">PHOTOGRAPHY</a></li>
             <li><a href="painting.html">PAINTING</a></li>
-            <li><a href="paper.hyml">PAPER CUTTING</a></li>
+            <li><a href="paper.html">PAPER CUTTING</a></li>
+            <li><a href="knitting.html">KNITTING</a></li>
           </ul>
         </li>
         <li><a href="#">SKILL</a>
             <ul class="menu-child">
-              <li><a href="#">PRODUCTS</a></li>
+              <li><a href="products.html">PRODUCTS</a></li>
             </ul>
         </li>
         <li><a href="#">ABOUT</a>
           <ul class="menu-child">
-            <li><a href="#">ACCESS</a></li>
             <li><a href="contact.html">CONTACT</a></li>
             <li><a href="blog.html">BLOG</a></li>
           </ul>
@@ -49,12 +48,12 @@
     <article>
       <h1>Paper-cutting(切り絵)</h1>
       <p>
-        あああああああああああああああああああああああああああいいいいいいいいいいいいいいいいいうううううううううううううううええええええええええええええおおおおお
+        15歳の頃に切り絵と出会いました。もともと絵が好きでしたが、黒い画用紙を切り抜いて表現することに魅力を感じて、切り絵に夢中になっていきました。
       <P>
     </article>
 
     <footer>
-      &copy; http://example.com
+      &copy; 2020 miduki
     </footer>
 
   </div>
